fix(cellNav): Don't lose focus with wrapping nav
When navigating beyond the left/right edges of grid around to the other
side, the grid was losing focus which prevented further navigation because
any keydown events were being sent to <body> (the new activeElement). This
fix causes the renderContainer to be REFOCUSED after a GRID_SCROLL event
in the case that the activeElement is document.body. We are assuming that
when scrolling within the grid, an element within the grid should have
focus.

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -1,9 +1,15 @@
 
 .ui-grid-render-container {
   position: relative;
+
   // overflow: hidden;
 
   .border-radius(0, @gridBorderRadius, @gridBorderRadius, 0);
+
+  // Prevent an outline from showing if we focus the render container element
+  &:focus {
+    outline: none;
+  }
 }
 
 .ui-grid-viewport {
